@@ -1,4 +1,4 @@
-# $NetBSD: ad.mips64el,v 1.57 2011/10/07 09:15:21 mrg Exp $
+# $NetBSD: ad.mips64el,v 1.58 2011/10/13 22:08:18 joerg Exp $
 ./usr/bin/elf2aout				comp-obsolete		obsolete
 ./usr/bin/elf2ecoff				comp-sysutil-bin
 ./usr/include/gcc-4.5/loongson.h		comp-c-include		gcccmds,gcc=45
@@ -576,6 +576,10 @@
 ./usr/lib/64/libsl.so				base-sys-shlib		compat,pic,kerberos
 ./usr/lib/64/libsl_p.a				comp-c-proflib		compat,profile,kerberos
 ./usr/lib/64/libsl_pic.a			comp-c-piclib		compat,pic,kerberos
+./usr/lib/64/libsqlite3.a			comp-c-lib		compat
+./usr/lib/64/libsqlite3.so			base-sys-shlib		compat,pic
+./usr/lib/64/libsqlite3_p.a			comp-c-proflib		compat,profile
+./usr/lib/64/libsqlite3_pic.a			comp-c-piclib		compat,pic
 ./usr/lib/64/libss.a				comp-c-lib		obsolete
 ./usr/lib/64/libss.so				base-sys-shlib		obsolete
 ./usr/lib/64/libss_p.a				comp-c-proflib		obsolete
@@ -1153,6 +1157,10 @@
 ./usr/lib/o32/libsl.so				base-sys-shlib		compat,pic,kerberos
 ./usr/lib/o32/libsl_p.a				comp-c-proflib		compat,profile,kerberos
 ./usr/lib/o32/libsl_pic.a			comp-c-piclib		compat,pic,kerberos
+./usr/lib/o32/libsqlite3.a			comp-c-lib		compat
+./usr/lib/o32/libsqlite3.so			base-sys-shlib		compat,pic
+./usr/lib/o32/libsqlite3_p.a			comp-c-proflib		compat,profile
+./usr/lib/o32/libsqlite3_pic.a			comp-c-piclib		compat,pic
 ./usr/lib/o32/libss.a				comp-c-lib		obsolete
 ./usr/lib/o32/libss.so				base-sys-shlib		obsolete
 ./usr/lib/o32/libss_p.a				comp-c-proflib		obsolete
@@ -1350,6 +1358,7 @@
 ./usr/libdata/debug/usr/lib/64/libsaslc.so.0.0.debug	comp-sys-debug	crypto,debug,compat
 ./usr/libdata/debug/usr/lib/64/libskey.so.2.0.debug	comp-sys-debug	skey,debug,compat
 ./usr/libdata/debug/usr/lib/64/libsl.so.5.0.debug		comp-krb5-debug	kerberos,debug,compat
+./usr/libdata/debug/usr/lib/64/libsqlite3.so.1.0.debug	comp-sys-debug	debug,compat
 ./usr/libdata/debug/usr/lib/64/libss.so.6.0.debug		comp-krb5-debug	obsolete
 ./usr/libdata/debug/usr/lib/64/libssh.so.18.0.debug	comp-secsh-debug	crypto,debug,compat
 ./usr/libdata/debug/usr/lib/64/libssl.so.9.0.debug		comp-crypto-debug	crypto,debug,compat
@@ -1500,6 +1509,7 @@
 ./usr/libdata/debug/usr/lib/o32/libsaslc.so.0.0.debug	comp-sys-debug	crypto,debug,compat
 ./usr/libdata/debug/usr/lib/o32/libskey.so.2.0.debug	comp-sys-debug	skey,debug,compat
 ./usr/libdata/debug/usr/lib/o32/libsl.so.5.0.debug		comp-krb5-debug	kerberos,debug,compat
+./usr/libdata/debug/usr/lib/o32/libsqlite3.so.1.0.debug	comp-sys-debug	debug,compat
 ./usr/libdata/debug/usr/lib/o32/libss.so.6.0.debug		comp-krb5-debug	obsolete
 ./usr/libdata/debug/usr/lib/o32/libssh.so.18.0.debug	comp-secsh-debug	crypto,debug,compat
 ./usr/libdata/debug/usr/lib/o32/libssl.so.9.0.debug		comp-crypto-debug	crypto,debug,compat
